# project_cons

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  dashboard.py  layout.py  materials.py  reports.py  transactions.py
backend/app/api/schemas/: auth.py  dashboard.py  layout.py  material.py  transaction.py
backend/app/application/services/: auth_service.py  dashboard_service.py  layout_service.py  material_service.py  transaction_service.py
backend/app/core/: config.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  material.py  transaction.py  user.py
backend/app/domain/services/: __init__.py  knapsack_optimizer.py  layout_calculator.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/auth/: jwt.py
backend/app/infrastructure/database/: __init__.py  models.py  session.py
backend/app/infrastructure/repositories/: material_repository.py  transaction_repository.py  user_repository.py
backend/scripts/: seed_db.py
backend/tests/: conftest.py  test_api.py  test_domain.py
docs/: SYSTEM_OVERVIEW_MN.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Badge.tsx  Button.tsx  Input.tsx  ProtectedRoute.tsx  Widget.tsx  dash-head.tsx  nav-main.tsx
frontend/src/context/: appContext.ts  (+2 more)
(+34 files in other folders)
